# LibError

./: CMakeLists.txt  README.md
LibError/: CMakeLists.txt
LibError/include/liberror/: CMakeLists.txt  Result.hpp  Try.hpp
cmake/: enable_tests.cmake
cmake/static_analyzers/: clang_tidy.cmake
tests/compiletime/: CMakeLists.txt  Main.cpp
tests/initialization/: CMakeLists.txt  Main.cpp
tests/runtime/: CMakeLists.txt  Main.cpp
